added register and login routes
